--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 3.0)
 project(TonalityReasoner)
 
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# Use C++ 11
+set(CMAKE_CXX_STANDARD 11)
+
 # Add source files
 set(SOURCES
     MusicalNote.h
